# foundationallm

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  documentation-generation.html  index.html  index.json  manifest.json  schema.html  toc.html  toc.json  xrefmap.yml
src/python/PythonSDK/: .gitignore  .pylintrc  LICENSE  PythonSDK.pyproj  README.md  main.py  pyproject.toml  requirements.txt
src/python/PythonSDK/foundationallm/: __init__.py
src/python/PythonSDK/foundationallm/caching/: __init__.py  cache_frequency.py  cache_manager.py
src/python/PythonSDK/foundationallm/clients/: __init__.py  chat.py  completions.py  embeddings.py  gateway_client.py
src/python/PythonSDK/foundationallm/completions/: __init__.py  gateway_azure_chat_openai.py  gateway_azure_completions_openai.py  gateway_azure_openai.py  gateway_completions.py
src/python/PythonSDK/foundationallm/config/: LICENSE  README.md  __init__.py  configuration.py  context.py  environment_variables.py  pyproject.toml  user_identity.py
src/python/PythonSDK/foundationallm/context/: __init__.py  context.py
src/python/PythonSDK/foundationallm/embeddings/: __init__.py  embedding_request.py  embedding_result.py  embeddings.py  gateway_azure_openai.py  gateway_embeddings.py
src/python/PythonSDK/foundationallm/event_handlers/: openai_assistant_async_event_handler.py  openai_assistant_event_handler.py
src/python/PythonSDK/foundationallm/hubs/: __init__.py  hub_base.py  metadata.py  repository.py  resolver.py
src/python/PythonSDK/foundationallm/logging/: instrumentation.py  logging.py
(+4782 files in other folders)
