[project]
name = "foundationallm"
version = "0.8.0"
authors = [
  { name="FoundationaLLM", email="dev@foundationallm.ai" },
]
description = "Enables integration with the FoundationaLLM platform."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://foundationallm.ai"
Issues = "https://github.com/solliancenet/foundationallm/issues"

[tool.setuptools.packages.find]
include = ['*']
